--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ ul{
 }
 
 #page .section:nth-child(1){
-    background:url(img/bg1111-08.png) no-repeat;
+    background:url(img/bg1-08.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
     min-height: 800px;
@@ -25,18 +25,11 @@ ul{
     bottom: 285px;
     left: 50%;
     transform: translateX(-50%);
-    white-space:nowrap;
-    overflow: hidden;
     height: 30px;
-    border-right: 1px solid black;
-    display: none;
-    
-}
-#page .section:nth-child(1) .n1ani{
-    animation:  typing 3s steps(11) , cur 1s steps(1) infinite;
 }
 #page .section:nth-child(1) .n2ani{
-    animation: typing 3s 3s steps(10) , cur 1s steps(1) infinite;
+    animation: typing 3s steps(10) , cur 1s steps(1) infinite;
+    width: 0;
 }
 @keyframes typing{
     from{
@@ -61,20 +54,20 @@ ul{
     overflow: hidden;
     height: 30px;
     border-right: 1px solid black;
-display: none;
-opacity: 0;
+    display: none;
+    opacity: 0;
 }
 #page .section:nth-child(1) #n2 span{
     color: white;
 }
 
 #page .section:nth-child(2){
-    background: url(img/bg2-07.png) no-repeat;
+    background: url(img/bg2-07.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(3){
-    background: url(img/bg3-03-22.png) no-repeat;
+    background: url(img/b3-22.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
@@ -123,7 +116,7 @@ opacity: 0;
     color: rgb(242, 123, 79);
 } */
 #page .section:nth-child(5){
-    background: url(img/bg5.png) no-repeat;
+    background: url(img/입학목업.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
@@ -170,27 +163,43 @@ opacity: 0;
     transition: all 1s 0.5s;
 }
 #page .section:nth-child(8){
-    background: url(img/bg8.png) no-repeat;
+    background: url(img/bg8.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(9){
-    background: url(img/bg9-22.png) no-repeat;
+    background: url(img/bg9.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(10){
-    background: url(img/bg10-2.png) no-repeat;
+    background: url(img/bg10-1.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
+    position: relative;
+    overflow: hidden;
+}
+#page .section:nth-child(10) .sns1{
+    position: absolute;
+    top: 0px;
+    left: -1400px;
+    z-index: 3;
+    transition: all 0.3s;
+}
+#page .section:nth-child(10) .sns2{
+    position: absolute;
+    top: 0px;
+    right: -1220px;
+    z-index: 3;
+    transition: all 0.3s;
 }
 #page .section:nth-child(11){
-    background: url(img/bg11-22.png) no-repeat;
+    background: url(img/bg11.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(12){
-    background: url(img/bg122-04.png) no-repeat;
+    background: url(img/bg12.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
     position: relative;
@@ -206,12 +215,12 @@ opacity: 0;
     min-width: 1500px;
 }
 #page .section:nth-child(14){
-    background: url(img/bg14-21.png) no-repeat;
+    background: url(img/bg14.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(15){
-    background: url(img/bg155-28.png) no-repeat;
+    background: url(img/bg15.jpg) no-repeat;
     background-size: 100% 100%;
     position: relative;
     min-width: 1500px;
@@ -222,22 +231,22 @@ opacity: 0;
     left: 8%;
 }
 #page .section:nth-child(16){
-    background: url(img/bg16-14.png) no-repeat;
+    background: url(img/bg16.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(17){
-    background: url(img/bg17-09.png) no-repeat;
+    background: url(img/bg177.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(18){
-    background: url(img/bg18-19.png) no-repeat;
+    background: url(img/bg18.jpg) no-repeat;
     background-size: 100% 100%;
     min-width: 1500px;
 }
 #page .section:nth-child(19){
-    background: url(img/bg199-26.png) no-repeat;
+    background: url(img/bg19.jpg) no-repeat;
     background-size: 100% 100%;
     position: absolute;
     min-width: 1920px;
